--- a/Todo/res/values/strings.xml
+++ b/Todo/res/values/strings.xml
@@ -11,6 +11,7 @@
     <!-- Actions -->
     <string name="action_settings">Settings</string>
     <string name="action_new">New</string>
+    <string name="action_play">Play</string>
     <string name="action_save">Save</string>
     <string name="action_share">Share</string>
     <string name="action_delete">Delete</string>
